# awesome-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
awesome_project/: __about__.py
awesome_template/: __about__.py
docs/: conf.py  index.rst
tests/: test_about.py  test_metadata.py
