[tool.poetry]
name = "awesome-template"
version = "0.0.0"
description = "A template project that does nothing"
authors = ["Ethan Paul <e@enp.one>"]
repository = "https://github.com/enpaul/awesome-template/"
packages = [{include = "awesome_template"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = { git = "https://github.com/psf/black.git" }
ipython = "^7.10.2"
mypy = "^0.782"
pre-commit = "^2.1.1"
pylint = "^2.4.4"
pytest = "^5.2.0"
pytest-cov = "^2.8.0"
reorder-python-imports = "^1.8.0"
safety = "^1.9.0"
sphinx = "^3.0.4"
sphinx-autodoc-typehints = "^1.8.0"
toml = "^0.10.1"
tox = "^3.14.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
