[tool.poetry]
name = "awesome-template"
version = "0.0.0"
description = "A template project that does nothing"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
repository = "https://github.com/enpaul/awesome-template/"
packages = [
  {include = "awesome_template"},
  {include = "tests/*.py", format = "sdist"}
]
include = [
  "awesome_template/py.typed"
]
keywords = ["awesome", "template"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = { git = "https://github.com/psf/black.git", allow-prereleases = true }
blacken-docs = "^1.8.0"
ipython = { version = "^7.18.1", python = "^3.7" }
mypy = "^0.782"
pre-commit = "^2.1.1"
pre-commit-hooks = "^3.3.0"
pylint = "^2.4.4"
pytest = "^5.2.0"
pytest-cov = "^2.8.0"
reorder-python-imports = "^1.8.0"
safety = "^1.9.0"
sphinx = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"
toml = "^0.10.1"
tox = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
