[tool.poetry]
name = "awesome-template"
version = "0.0.0"
description = "An awesome python template project that does nothing"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
repository = "https://github.com/enpaul/awesome-template/"
packages = [
  {include = "awesome_template"},
  {include = "tests/*.py", format = "sdist"}
]
include = [
  "awesome_template/py.typed"
]
keywords = ["awesome", "template"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = {version = "^20.8b1", allow-prereleases = true}
blacken-docs = "^1.9.0"
ipython = { version = "^7.18.1", python = "^3.7" }
mypy = "^0.800"
pre-commit = "^2.10.1"
pre-commit-hooks = "^3.3.0"
pylint = "^2.6.4"
pytest = "^5.2.0"
pytest-cov = "^2.8.0"
reorder-python-imports = "^2.4.0"
safety = "^1.9.0"
sphinx = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"
toml = "^0.10.1"
tox = "^3.21.0"
tox-poetry-installer = {version = "^0.6.4", extras = ["poetry"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
